Sukurta naudojant „Colaboratory“

--- a/SVM/svm_on_suicide.ipynb
+++ b/SVM/svm_on_suicide.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "svm_on_suicide.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO4Jfvk5GnNV4Sny21SUSsf",
+      "authorship_tag": "ABX9TyOiMJaxNGn07T0obqJJaDA+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/esadausk/data_mining/blob/main/svm_on_suicide.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/esadausk/data_mining/blob/main/SVM/svm_on_suicide.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -42,7 +42,7 @@
         "from numpy import asarray\r\n",
         "from mlxtend.plotting import plot_decision_regions"
       ],
-      "execution_count": 1,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -52,7 +52,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tov-ZbIb_kx3",
-        "outputId": "ea7827c1-f30b-4316-b293-0827b9e9ac46"
+        "outputId": "c89446d2-d0a0-411d-e1e9-bf16c2599668"
       },
       "source": [
         "#Suicide data\r\n",
@@ -60,7 +60,7 @@
         "dataframe = pd.read_csv(url)\r\n",
         "print(dataframe)"
       ],
-      "execution_count": 2,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y6s-9m-Z_sjP",
-        "outputId": "d5f43cf3-3caa-45ce-f001-a15f09f8a5e7"
+        "outputId": "8a866ada-0302-46dc-c231-74f802269138"
       },
       "source": [
         "#Data cleaning\r\n",
@@ -111,56 +111,56 @@
         "print('Uniq values and frequencies:\\n',dataframe['country'].value_counts())\r\n",
         "print('Uniq values and frequencies:\\n',dataframe['year'].value_counts())"
       ],
-      "execution_count": 3,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Uniq values and frequencies:\n",
-            " Ireland1999           12\n",
-            "Luxembourg1987        12\n",
-            "Greece1993            12\n",
-            "Bulgaria2000          12\n",
-            "Bahrain2002           12\n",
-            "                      ..\n",
-            "Armenia2016           10\n",
-            "Czech Republic2016    10\n",
-            "Hungary2016           10\n",
-            "Sweden2016            10\n",
-            "Iceland2016           10\n",
+            " Israel2000                 12\n",
+            "Colombia2014               12\n",
+            "Aruba2006                  12\n",
+            "Antigua and Barbuda1998    12\n",
+            "Kazakhstan1996             12\n",
+            "                           ..\n",
+            "Czech Republic2016         10\n",
+            "Croatia2016                10\n",
+            "Iceland2016                10\n",
+            "Thailand2016               10\n",
+            "Sweden2016                 10\n",
             "Name: country_year, Length: 2321, dtype: int64\n",
             "Uniq values and frequencies:\n",
             " Iceland                   382\n",
+            "Netherlands               382\n",
             "Austria                   382\n",
             "Mauritius                 382\n",
-            "Netherlands               382\n",
-            "Luxembourg                372\n",
+            "United Kingdom            372\n",
             "                         ... \n",
             "Bosnia and Herzegovina     24\n",
+            "Cabo Verde                 12\n",
             "Dominica                   12\n",
             "Macau                      12\n",
-            "Cabo Verde                 12\n",
             "Mongolia                   10\n",
             "Name: country, Length: 101, dtype: int64\n",
             "Uniq values and frequencies:\n",
             " 2009    1068\n",
-            "2001    1056\n",
             "2010    1056\n",
-            "2007    1032\n",
-            "2011    1032\n",
-            "2003    1032\n",
-            "2002    1032\n",
+            "2001    1056\n",
             "2000    1032\n",
-            "2006    1020\n",
+            "2007    1032\n",
+            "2002    1032\n",
+            "2003    1032\n",
+            "2011    1032\n",
             "2008    1020\n",
+            "2006    1020\n",
             "2004    1008\n",
             "2005    1008\n",
             "1999     996\n",
             "2012     972\n",
             "2013     960\n",
             "1998     948\n",
-            "2014     936\n",
             "1995     936\n",
+            "2014     936\n",
             "1996     924\n",
             "1997     924\n",
             "1994     816\n",
@@ -188,13 +188,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MnNQqcw0AH8G",
-        "outputId": "139e837a-1671-48a9-9c11-72a001338e64"
+        "outputId": "58986bca-55b5-420f-db4c-c02aed051a6a"
       },
       "source": [
         "print(dataframe.describe(include = ['int64', 'float64']))\r\n",
         "print(dataframe.describe(include = [\"object\"]))"
       ],
-      "execution_count": 4,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,11 +208,11 @@
             "50%       25.000000  4.301500e+05  4.811469e+10     9372.000000\n",
             "75%      131.000000  1.486143e+06  2.602024e+11    24874.000000\n",
             "max    22338.000000  4.380521e+07  1.812071e+13   126352.000000\n",
-            "          sex          age   year  country\n",
-            "count   27820        27820  27820    27820\n",
-            "unique      2            6     32      101\n",
-            "top      male  15-24 years   2009  Iceland\n",
-            "freq    13910         4642   1068      382\n"
+            "           sex          age   year  country\n",
+            "count    27820        27820  27820    27820\n",
+            "unique       2            6     32      101\n",
+            "top     female  35-54 years   2009  Iceland\n",
+            "freq     13910         4642   1068      382\n"
           ],
           "name": "stdout"
         }
@@ -223,27 +223,27 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 743
+          "height": 694
         },
         "id": "8zQyJxM0BGq_",
-        "outputId": "ab88d785-98a0-4a59-9479-18fc360e561c"
+        "outputId": "a5a4cd21-7f2f-4332-cf39-965777ec5ae2"
       },
       "source": [
         "sns.pairplot(dataframe, hue='sex')"
       ],
-      "execution_count": 5,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.PairGrid at 0x7f2777d233c8>"
+              "<seaborn.axisgrid.PairGrid at 0x7fd665242828>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 22
         },
         {
           "output_type": "display_data",
@@ -268,9 +268,9 @@
       "source": [
         "#Target sex\r\n",
         "#Features suicide_num, GDP_per_year\r\n",
-        "dataframe.drop(['age', 'population', 'GDP_per_capita', 'year', 'country'], axis=1, inplace=True)\r\n"
+        "dataframe.drop(['population'], axis=1, inplace=True)\r\n"
       ],
-      "execution_count": 6,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -280,31 +280,31 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MsGJFiWcWMtS",
-        "outputId": "37a03054-9a62-474c-8cb0-5c1545318225"
+        "outputId": "d3ff2863-a3b0-40f2-8bb1-4c6487800574"
       },
       "source": [
         "dataframe.sex.replace({'male':1,'female':0}, inplace=True)\r\n",
         "print(dataframe)"
       ],
-      "execution_count": 7,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "       sex  suicide_num  GDP_per_year\n",
-            "0        1           21    2156624900\n",
-            "1        1           16    2156624900\n",
-            "2        0           14    2156624900\n",
-            "3        1            1    2156624900\n",
-            "4        1            9    2156624900\n",
-            "...    ...          ...           ...\n",
-            "27815    0          107   63067077179\n",
-            "27816    0            9   63067077179\n",
-            "27817    1           60   63067077179\n",
-            "27818    0           44   63067077179\n",
-            "27819    0           21   63067077179\n",
+            "       sex          age  suicide_num  ...  GDP_per_capita  year     country\n",
+            "0        1  15-24 years           21  ...             796  1987     Albania\n",
+            "1        1  35-54 years           16  ...             796  1987     Albania\n",
+            "2        0  15-24 years           14  ...             796  1987     Albania\n",
+            "3        1    75+ years            1  ...             796  1987     Albania\n",
+            "4        1  25-34 years            9  ...             796  1987     Albania\n",
+            "...    ...          ...          ...  ...             ...   ...         ...\n",
+            "27815    0  35-54 years          107  ...            2309  2014  Uzbekistan\n",
+            "27816    0    75+ years            9  ...            2309  2014  Uzbekistan\n",
+            "27817    1   5-14 years           60  ...            2309  2014  Uzbekistan\n",
+            "27818    0   5-14 years           44  ...            2309  2014  Uzbekistan\n",
+            "27819    0  55-74 years           21  ...            2309  2014  Uzbekistan\n",
             "\n",
-            "[27820 rows x 3 columns]\n"
+            "[27820 rows x 7 columns]\n"
           ],
           "name": "stdout"
         }
@@ -316,27 +316,47 @@
         "id": "MnauYsuqIXbT"
       },
       "source": [
-        "target = dataframe['sex']\r\n",
-        "features = dataframe[['suicide_num', 'GDP_per_year']]\r\n",
-        "\r\n",
-        "standfeatures = StandardScaler().fit_transform(features)\r\n",
-        "\r\n",
-        "x_train, x_test, y_train, y_test = train_test_split(standfeatures, target, test_size=0.2, random_state = 42)"
+        "target = dataframe[['sex']]\r\n",
+        "features = dataframe[[ 'suicide_num', 'GDP_per_year', 'GDP_per_capita', 'year']]\r\n"
       ],
-      "execution_count": 8,
+      "execution_count": 33,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-nJ5mNf8TxRK"
+        "id": "mNFI7WlmZ2oM"
       },
       "source": [
-        "svc = svm.SVC(kernel = 'rbf', gamma = 0.1, C=100)\r\n",
+        "x_train, x_test, y_train, y_test = train_test_split(features, target, test_size=0.2, random_state = 42)"
+      ],
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-nJ5mNf8TxRK",
+        "outputId": "7b83303c-d945-40e0-d908-b1a47d698d91",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "svc = svm.SVC(kernel = 'rbf', gamma = 0.01, C=100)\r\n",
         "model = svc.fit(x_train, y_train)"
       ],
-      "execution_count": 9,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py:760: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+            "  y = column_or_1d(y, warn=True)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -345,25 +365,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HtyarCp1U-xI",
-        "outputId": "508181e5-d1da-4c6f-cd95-5a880b8e741b"
+        "outputId": "c86e37bc-a7cc-41c2-b621-e2b445c09b4a"
       },
       "source": [
         "predict = svc.predict(x_test)\r\n",
         "metrics.accuracy_score(y_test, predict)"
       ],
-      "execution_count": 10,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.6062185478073329"
+              "0.5614665708123652"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 52
         }
       ]
     }
